--- a/src/app/alert/alert.component.html
+++ b/src/app/alert/alert.component.html
@@ -1,11 +1,11 @@
 <ng-template #template>
   <div class="modal-header">
-    <h4 class="modal-title pull-left">Modal</h4>
+    <h4 class="modal-title pull-left">{{title}}</h4>
     <button (click)="modalRef?.hide()" aria-label="Close" class="btn-close close pull-right" type="button">
       <span aria-hidden="true" class="visually-hidden">&times;</span>
     </button>
   </div>
   <div class="modal-body">
-    This is a modal.
+    {{message}}
   </div>
 </ng-template>
