--- a/src/app/back-office/candidate-new/candidate-new.component.html
+++ b/src/app/back-office/candidate-new/candidate-new.component.html
@@ -1,7 +1,7 @@
 <div class="container my-3">
   <div class="row">
     <div class="col-md-6 offset-md-3 col-sm-12">
-      <form [formGroup]="fg">
+      <form (ngSubmit)="submit()" [formGroup]="fg">
         <div class="mb-3">
           <label class="form-label" for="firstName">Nome</label>
           <input class="form-control" formControlName="firstName" id="firstName">
