--- a/src/app/back-office/company-new/company-new.component.html
+++ b/src/app/back-office/company-new/company-new.component.html
@@ -1,1 +1,7 @@
-<p>company-new works!</p>
+<div class="container my-3">
+  <div class="row">
+    <div class="col-sm-12 col-md-6 offset-md-3">
+      <app-company-form (submitted)="submit($event)"></app-company-form>
+    </div>
+  </div>
+</div>
