--- a/src/app/company/company-profile/company-profile.component.html
+++ b/src/app/company/company-profile/company-profile.component.html
@@ -10,19 +10,7 @@
 
   <div class="row">
     <div class="col-md-6 offset-md-3 col-sm-12">
-      <form (ngSubmit)="submit()" [formGroup]="fg">
-        <div class="mb-3">
-          <label class="form-label" for="name">Nome</label>
-          <input class="form-control" formControlName="name" id="name" type="text">
-        </div>
-
-        <div class="mb-3">
-          <label class="form-label" for="email">Email</label>
-          <input class="form-control" formControlName="email" id="email" type="email">
-        </div>
-
-        <button [disabled]="fg.invalid" class="btn btn-primary" type="submit">Submit</button>
-      </form>
+      <app-company-form (submitted)="submit($event)" [company]="company"></app-company-form>
     </div>
   </div>
 </div>
