--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-12">
+      <a [routerLinkActive]="'btn-disabled'" [routerLink]="'/home'" class="text-center">Home</a>
+    </div>
+  </div>
+</div>
+
 <router-outlet></router-outlet>
 
 <app-alert></app-alert>
