--- a/src/app/company/company-profile/company-profile.component.html
+++ b/src/app/company/company-profile/company-profile.component.html
@@ -1,5 +1,11 @@
 <div class="container my-5">
   <div class="row">
+    <div class="col">
+      <h4 *ngIf="logged" class="text-center">Modifica il profilo della tua società</h4>
+      <h4 *ngIf="!logged" class="text-center">Iscriviti come nuova azienda</h4>
+    </div>
+  </div>
+  <div class="row">
     <div class="col-12 d-flex flex-row justify-content-center">
       <div>
         <a *ngIf="!logged" [routerLink]="'/company/profile'" class="btn btn-primary">Profilo</a>
