--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <div class="row">
-    <div class="col-12">
-      <a [routerLinkActive]="'btn-disabled'" [routerLink]="'/home'" class="text-center">Home</a>
+    <div class="col-12 text-center">
+      <a [routerLink]="'/home'">Home</a>
     </div>
   </div>
 </div>
