Inizio componente storico candidature

--- a/src/app/back-office/back-office-general/back-office-general.component.html
+++ b/src/app/back-office/back-office-general/back-office-general.component.html
@@ -3,16 +3,18 @@
     <div class="col-12">
       <ul class="nav nav-pills justify-content-center">
         <li class="nav-item">
-          <a [routerLinkActive]="'active'" [routerLink]="'/back-office/candidate-new'" aria-current="page"
-             class="nav-link">Nuovo candidato</a>
+          <a [routerLinkActive]="'active'" [routerLink]="'/back-office/candidate-new'" class="nav-link">Nuovo
+            candidato</a>
         </li>
         <li class="nav-item">
-          <a [routerLinkActive]="'active'" [routerLink]="'/back-office/company-new'" aria-current="page"
-             class="nav-link">Nuova azienda</a>
+          <a [routerLinkActive]="'active'" [routerLink]="'/back-office/company-new'" class="nav-link">Nuova azienda</a>
         </li>
         <li class="nav-item">
-          <a [routerLinkActive]="'active'" [routerLink]="'/back-office/vacancy-new'" aria-current="page"
-             class="nav-link">Nuova vacancy</a>
+          <a [routerLinkActive]="'active'" [routerLink]="'/back-office/vacancy-new'" class="nav-link">Nuova vacancy</a>
+        </li>
+        <li class="nav-item">
+          <a [routerLinkActive]="'active'" [routerLink]="'/back-office/apply-list'" class="nav-link">Storico
+            candidature</a>
         </li>
       </ul>
     </div>
