--- a/src/app/back-office/apply-list/apply-list.component.html
+++ b/src/app/back-office/apply-list/apply-list.component.html
@@ -1,4 +1,9 @@
 <div class="container">
+  <div class="row">
+    <div class="col">
+      <h4>Ricerca candidature</h4>
+    </div>
+  </div>
   <div class="row mb-3">
     <form (ngSubmit)="getApplies(searchForm.getRawValue())" [formGroup]="searchForm" class="row">
       <div class="col-sm-4">
