Modifica reset form profilo azienda

--- a/src/app/company/company-profile/company-profile.component.html
+++ b/src/app/company/company-profile/company-profile.component.html
@@ -10,7 +10,7 @@
 
   <div class="row">
     <div class="col-md-6 offset-md-3 col-sm-12">
-      <app-company-form (submitted)="submit($event)" [company]="company"></app-company-form>
+      <app-company-form (submitted)="submit($event)" [company]="company" [reset]="reset"></app-company-form>
     </div>
   </div>
 </div>
